[project]
name = "vortex"
version = "0.1.0"
description = "Vortex (ML Training Engine) for Sophia - Part of Project Anvil Universe"
authors = [{ name = "Dex", email = "dex@anvil.engine" }]
dependencies = [
    "polars",
    "pandas",
    "numpy",
    "scikit-learn",
    "torch",
    "lightgbm",
    "xgboost",
    "pydantic-settings",
    "loguru",
    "matplotlib",
    "pyarrow",
    "fastapi",
    "uvicorn[standard]",
    "psycopg2-binary>=2.9.11",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
requires-python = ">=3.11"
[project.scripts]
vortex-train          = "pipelines.vortex_train:main"
vortex-train-balanced = "pipelines.vortex_train_balanced:main"
vortex-oos-test       = "pipelines.vortex_oos_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain", "pipelines"]
